workspace(name = "rules_pytest")

load("//python/pytest:repositories.bzl", "rules_pytest_dependencies")

rules_pytest_dependencies()

load("@rules_venv//python/venv:repositories.bzl", "rules_venv_dependencies", "venv_register_toolchains")

rules_venv_dependencies()

venv_register_toolchains()

load("@rules_venv//python/venv:repositories_transitive.bzl", "rules_venv_transitive_deps")

rules_venv_transitive_deps()

load("//python/pytest:repositories_transitive_1.bzl", "rules_pytest_transitive_deps_1")

rules_pytest_transitive_deps_1()

load("//python/pytest:repositories_transitive_2.bzl", "rules_pytest_transitive_deps_2")

rules_pytest_transitive_deps_2()

load("//python/pytest:repositories_transitive_3.bzl", "rules_pytest_transitive_deps_3")

rules_pytest_transitive_deps_3()

load("//python/pytest:repositories_toolchains.bzl", "register_pytest_toolchains")

register_pytest_toolchains()

# =============================================================================
#  Internal dependencies only
# =============================================================================

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python311",
    python_version = "3.11",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel_stardoc",
    sha256 = "62bd2e60216b7a6fec3ac79341aa201e0956477e7c8f6ccc286f279ad1d96432",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/stardoc/releases/download/0.6.2/stardoc-0.6.2.tar.gz",
        "https://github.com/bazelbuild/stardoc/releases/download/0.6.2/stardoc-0.6.2.tar.gz",
    ],
)

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")

stardoc_repositories()

load("@rules_jvm_external//:repositories.bzl", "rules_jvm_external_deps")

rules_jvm_external_deps()

load("@rules_jvm_external//:setup.bzl", "rules_jvm_external_setup")

rules_jvm_external_setup()

load("@io_bazel_stardoc//:deps.bzl", "stardoc_external_deps")

stardoc_external_deps()

load("@stardoc_maven//:defs.bzl", stardoc_pinned_maven_install = "pinned_maven_install")

stardoc_pinned_maven_install()
