load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "pytest_process_wrapper_test",
    srcs = ["pytest_process_wrapper_test.py"],
    deps = [
        "//python/pytest/private:pytest_process_wrapper",
        "@pytest_deps//:coverage",
        "@pytest_deps//:pytest_cov",
        "@pytest_deps//:pytest_xdist",
    ],
)
