load("//python/pytest:defs.bzl", "py_pytest_test")

py_pytest_test(
    name = "version_test",
    srcs = ["version_test.py"],
    data = [
        "//:MODULE.bazel",
        "//:version.bzl",
    ],
    # TODO: https://github.com/bazelbuild/rules_python/issues/2141
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "@rules_python//python/runfiles",
    ],
)
