load("@rules_python//python:defs.bzl", "py_library")
load("//python/pytest:defs.bzl", "PYTEST_TARGET", "py_pytest_test")

py_library(
    name = "lib",
    srcs = glob(["lib/**/*.py"]),
    imports = ["."],
)

py_library(
    name = "lib_testonly",
    testonly = True,
    srcs = glob(["lib_testonly/**/*.py"]),
)

py_library(
    name = "with_args_test_lib",
    srcs = ["tests/conftest.py"],
    deps = [PYTEST_TARGET],
)

py_pytest_test(
    name = "with_args_test",
    srcs = ["tests/with_args_test.py"],
    args = [
        # Show that pytest-xdist args are accepted
        "--dist",
        "loadgroup",
        # Show show that custom flags are also passed
        "--custom_arg",
        "Occupy Mars",
    ],
    numprocesses = 2,
    deps = [
        ":lib",
        ":lib_testonly",
        ":with_args_test_lib",
    ],
)
