load("@rules_python//python:defs.bzl", "py_library")
load("//python/pytest:defs.bzl", "py_pytest_test_suite")

py_library(
    name = "coverage",
    srcs = glob(["lib/**/*.py"]),
    imports = ["."],
)

py_pytest_test_suite(
    name = "coverage_test",
    coverage_rc = ".coveragerc",
    tests = ["tests/coverage_test.py"],
    visibility = ["//python/pytest/private/tests/coverage:__pkg__"],
    deps = [":coverage"],
)
